[gd_scene load_steps=9 format=3 uid="uid://d1jaj3ghuifcy"]

[ext_resource type="Script" path="res://游戏资源/地图/交互/WoodenBox.gd" id="1_154p1"]
[ext_resource type="Texture2D" uid="uid://cgvncgiivgu34" path="res://游戏资源/地图/交互/资源/可交互图块2_pixian_ai.png" id="2_7lye1"]
[ext_resource type="AudioStream" uid="uid://dhh0wmc7gqh2h" path="res://游戏资源/地图/交互/资源/打开箱子.mp3" id="3_8gf1t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qp5mp"]
atlas = ExtResource("2_7lye1")
region = Rect2(32, 382, 128, 34)

[sub_resource type="Animation" id="Animation_ajjtv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5r6ip"]
resource_name = "打开箱子"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 3, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"create_coin"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lsnon"]
_data = {
"RESET": SubResource("Animation_ajjtv"),
"打开箱子": SubResource("Animation_5r6ip")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wuufr"]
size = Vector2(32, 32)

[node name="WoodenBox" type="Node2D"]
position = Vector2(332, 119)
script = ExtResource("1_154p1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_qp5mp")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lsnon")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8gf1t")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-16, -15)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_wuufr")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
